--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "faiss-cpu==1.13.0",
     "fastapi==0.123.8",
     "gradio==3.36.1",
-    "httpx==0.27.1",
+    "httpx[socks]==0.27.1",
     "ipykernel>=7.1.0",
     "ipywidgets==8.1.7",
     "lagent==0.1.2",
